# rust-game

./: Cargo.toml  README.md
src/: 1.code-workspace  ai.rs  main.rs
